# contextDecayWindow

./: .gitignore  README.md  pyproject.toml  run_study.py
dev-history/: 001-pre-registration.md
experiments/study_001/: README.md  analysis_summary.txt  pre_registration.md  rubric_filled.md  script.json
experiments/study_002/: README.md  analysis_summary.txt  (+4 more)
scripts/: analyze_run.py
sprint-specs/: 001-sprint-spec.md  002-sprint-spec.md  003-topic-layer.md  004-retrieval-and-context-construction.md  005-observability-layer.md  006-baseline-conditions.md  007-test-script-and-filled-rubric.md  008-inference-integration-and-study-run.md  009-analysis-and-writeup.md  s2-001-pre-registration.md  s2-002-rule-store-and-detection.md  s2-003-soft-n-cap-and-threshold-updates.md  s2-004-topic-consolidation.md  s2-005-observability-updates.md  s2-006-baseline-updates-and-runner-integration.md  s2-007-test-script-and-filled-rubric.md  s2-008-study-run.md
tests/: conftest.py  test_compaction_runner.py  test_consolidation.py  test_context_builder.py  test_context_builder_s2.py  test_db.py  test_embeddings.py  test_file_writer.py  test_file_writer_s2.py  test_full_context_runner.py  test_inference_provider.py  test_iterative_runner.py  test_iterative_runner_s2.py  test_observer.py  test_retrieval_db.py  test_retrieval_engine.py  test_retrieval_engine_s2.py  test_rule_detection.py  test_rule_store.py  test_study_runner.py  test_study_runner_s2.py  test_terminal.py  test_terminal_s2.py  test_topic_db.py  test_topic_manager.py  test_topic_manager_s2.py  test_topic_manager_s2b.py
(+53 files in other folders)
