[project]
name = "context-decay-window"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "llama-cpp-python>=0.3.0",
    "sqlite-vec>=0.1.0",
    "numpy>=1.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
